; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_btmemb.c_btmemb_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_btmemb.c_btmemb_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memb_blks = type { i64, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btmemb_free(%struct.memb_blks* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.memb_blks*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store %struct.memb_blks* %0, %struct.memb_blks** %4, align 8
  store i8* %1, i8** %5, align 8
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @_CPU_ISR_Disable(i32 %11)
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to i32*
  store i32* %14, i32** %10, align 8
  %15 = load %struct.memb_blks*, %struct.memb_blks** %4, align 8
  %16 = getelementptr inbounds %struct.memb_blks, %struct.memb_blks* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = inttoptr i64 %17 to i32*
  store i32* %18, i32** %9, align 8
  store i64 0, i64* %7, align 8
  br label %19

19:                                               ; preds = %46, %2
  %20 = load i64, i64* %7, align 8
  %21 = load %struct.memb_blks*, %struct.memb_blks** %4, align 8
  %22 = getelementptr inbounds %struct.memb_blks, %struct.memb_blks* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp slt i64 %20, %23
  br i1 %24, label %25, label %49

25:                                               ; preds = %19
  %26 = load i32*, i32** %9, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 -1
  %29 = icmp eq i32* %26, %28
  br i1 %29, label %30, label %37

30:                                               ; preds = %25
  %31 = load i32*, i32** %9, align 8
  %32 = load i32, i32* %31, align 4
  %33 = add nsw i32 %32, -1
  store i32 %33, i32* %31, align 4
  store i32 %33, i32* %6, align 4
  %34 = load i32, i32* %8, align 4
  %35 = call i32 @_CPU_ISR_Restore(i32 %34)
  %36 = load i32, i32* %6, align 4
  store i32 %36, i32* %3, align 4
  br label %52

37:                                               ; preds = %25
  %38 = load i32*, i32** %9, align 8
  %39 = load %struct.memb_blks*, %struct.memb_blks** %4, align 8
  %40 = getelementptr inbounds %struct.memb_blks, %struct.memb_blks* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = call i32 @MEM_ALIGN_SIZE(i32 %41)
  %43 = sext i32 %42 to i64
  %44 = add i64 %43, 4
  %45 = getelementptr inbounds i32, i32* %38, i64 %44
  store i32* %45, i32** %9, align 8
  br label %46

46:                                               ; preds = %37
  %47 = load i64, i64* %7, align 8
  %48 = add nsw i64 %47, 1
  store i64 %48, i64* %7, align 8
  br label %19

49:                                               ; preds = %19
  %50 = load i32, i32* %8, align 4
  %51 = call i32 @_CPU_ISR_Restore(i32 %50)
  store i32 -1, i32* %3, align 4
  br label %52

52:                                               ; preds = %49, %30
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1

declare dso_local i32 @MEM_ALIGN_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
